git-svn-id: https://cchlib.googlecode.com/svn/trunk@2386 bc589049-105d-1923-a3ce-6fcb24364ed1